--- a/css/styles_dark-purple3.css
+++ b/css/styles_dark-purple3.css
@@ -29,7 +29,7 @@
   --gray: #6c757d;
   --gray-dark: #343a40;
   --primary: #a75265;
-  --secondary: #ec7263;
+  --secondary: #57385c;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
@@ -217,7 +217,7 @@ table {
 caption {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-  color: #ec7263;
+  color: #57385c;
   text-align: left;
   caption-side: bottom;
 }
@@ -472,7 +472,7 @@ mark,
 .blockquote-footer {
   display: block;
   font-size: 80%;
-  color: #ec7263;
+  color: #57385c;
 }
 .blockquote-footer::before {
   content: "— ";
@@ -503,7 +503,7 @@ mark,
 
 .figure-caption {
   font-size: 90%;
-  color: #ec7263;
+  color: #57385c;
 }
 
 code {
@@ -2031,23 +2031,23 @@ pre code {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.25);
 }
 .form-control::-webkit-input-placeholder {
-  color: #ec7263;
+  color: #57385c;
   opacity: 1;
 }
 .form-control::-moz-placeholder {
-  color: #ec7263;
+  color: #57385c;
   opacity: 1;
 }
 .form-control:-ms-input-placeholder {
-  color: #ec7263;
+  color: #57385c;
   opacity: 1;
 }
 .form-control::-ms-input-placeholder {
-  color: #ec7263;
+  color: #57385c;
   opacity: 1;
 }
 .form-control::placeholder {
-  color: #ec7263;
+  color: #57385c;
   opacity: 1;
 }
 .form-control:disabled, .form-control[readonly] {
@@ -2171,7 +2171,7 @@ textarea.form-control {
   margin-left: -1.25rem;
 }
 .form-check-input[disabled] ~ .form-check-label, .form-check-input:disabled ~ .form-check-label {
-  color: #ec7263;
+  color: #57385c;
 }
 
 .form-check-label {
@@ -2506,8 +2506,8 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
   color: #fff;
-  background-color: #ec7263;
-  border-color: #ec7263;
+  background-color: #57385c;
+  border-color: #57385c;
 }
 .btn-secondary:hover {
   color: #fff;
@@ -2522,8 +2522,8 @@ fieldset:disabled a.btn {
 }
 .btn-secondary.disabled, .btn-secondary:disabled {
   color: #fff;
-  background-color: #ec7263;
-  border-color: #ec7263;
+  background-color: #57385c;
+  border-color: #57385c;
 }
 .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active, .show > .btn-secondary.dropdown-toggle {
   color: #fff;
@@ -2740,25 +2740,25 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-secondary {
-  color: #ec7263;
-  border-color: #ec7263;
+  color: #57385c;
+  border-color: #57385c;
 }
 .btn-outline-secondary:hover {
   color: #fff;
-  background-color: #ec7263;
-  border-color: #ec7263;
+  background-color: #57385c;
+  border-color: #57385c;
 }
 .btn-outline-secondary:focus, .btn-outline-secondary.focus {
   box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
 }
 .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-  color: #ec7263;
+  color: #57385c;
   background-color: transparent;
 }
 .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active, .show > .btn-outline-secondary.dropdown-toggle {
   color: #fff;
-  background-color: #ec7263;
-  border-color: #ec7263;
+  background-color: #57385c;
+  border-color: #57385c;
 }
 .btn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-secondary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
@@ -2927,7 +2927,7 @@ fieldset:disabled a.btn {
   text-decoration: underline;
 }
 .btn-link:disabled, .btn-link.disabled {
-  color: #ec7263;
+  color: #57385c;
   pointer-events: none;
 }
 
@@ -3196,7 +3196,7 @@ input[type=button].btn-block {
   background-color: #a75265;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
-  color: #ec7263;
+  color: #57385c;
   pointer-events: none;
   background-color: transparent;
 }
@@ -3210,7 +3210,7 @@ input[type=button].btn-block {
   padding: 0.5rem 1.5rem;
   margin-bottom: 0;
   font-size: 0.875rem;
-  color: #ec7263;
+  color: #57385c;
   white-space: nowrap;
 }
 
@@ -3534,7 +3534,7 @@ input[type=button].btn-block {
   border-color: #ebc9bc;
 }
 .custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
-  color: #ec7263;
+  color: #57385c;
 }
 .custom-control-input[disabled] ~ .custom-control-label::before, .custom-control-input:disabled ~ .custom-control-label::before {
   background-color: #e9ecef;
@@ -3661,7 +3661,7 @@ input[type=button].btn-block {
   background-image: none;
 }
 .custom-select:disabled {
-  color: #ec7263;
+  color: #57385c;
   background-color: #e9ecef;
 }
 .custom-select::-ms-expand {
@@ -3918,7 +3918,7 @@ input[type=button].btn-block {
   text-decoration: none;
 }
 .nav-link.disabled {
-  color: #ec7263;
+  color: #57385c;
   pointer-events: none;
   cursor: default;
 }
@@ -3938,7 +3938,7 @@ input[type=button].btn-block {
   border-color: #e9ecef #e9ecef #dee2e6;
 }
 .nav-tabs .nav-link.disabled {
-  color: #ec7263;
+  color: #57385c;
   background-color: transparent;
   border-color: transparent;
 }
@@ -4578,7 +4578,7 @@ input[type=button].btn-block {
 .breadcrumb-item + .breadcrumb-item::before {
   display: inline-block;
   padding-right: 0.5rem;
-  color: #ec7263;
+  color: #57385c;
   content: "/";
 }
 .breadcrumb-item + .breadcrumb-item:hover::before {
@@ -4588,7 +4588,7 @@ input[type=button].btn-block {
   text-decoration: none;
 }
 .breadcrumb-item.active {
-  color: #ec7263;
+  color: #57385c;
 }
 
 .pagination {
@@ -4637,7 +4637,7 @@ input[type=button].btn-block {
   border-color: #a75265;
 }
 .page-item.disabled .page-link {
-  color: #ec7263;
+  color: #57385c;
   pointer-events: none;
   cursor: auto;
   background-color: #fff;
@@ -4723,7 +4723,7 @@ a.badge-primary:focus, a.badge-primary.focus {
 
 .badge-secondary {
   color: #fff;
-  background-color: #ec7263;
+  background-color: #57385c;
 }
 a.badge-secondary:hover, a.badge-secondary:focus {
   color: #fff;
@@ -5062,7 +5062,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   border-bottom-left-radius: inherit;
 }
 .list-group-item.disabled, .list-group-item:disabled {
-  color: #ec7263;
+  color: #57385c;
   pointer-events: none;
   background-color: #fff;
 }
@@ -5379,7 +5379,7 @@ a.close.disabled {
   display: flex;
   align-items: center;
   padding: 0.25rem 0.75rem;
-  color: #ec7263;
+  color: #57385c;
   background-color: rgba(255, 255, 255, 0.85);
   background-clip: padding-box;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
@@ -6111,7 +6111,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #ec7263 !important;
+  background-color: #57385c !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
@@ -6233,7 +6233,7 @@ button.bg-dark:focus {
 }
 
 .border-secondary {
-  border-color: #ec7263 !important;
+  border-color: #57385c !important;
 }
 
 .border-success {
@@ -9811,7 +9811,7 @@ a.text-primary:hover, a.text-primary:focus {
 }
 
 .text-secondary {
-  color: #ec7263 !important;
+  color: #57385c !important;
 }
 
 a.text-secondary:hover, a.text-secondary:focus {
@@ -9871,7 +9871,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-muted {
-  color: #ec7263 !important;
+  color: #57385c !important;
 }
 
 .text-black-50 {
@@ -10006,7 +10006,7 @@ h3 {
 }
 body {
   padding-top: 3.375rem;
-  color: #ec7263;
+  color: #57385c;
 }
 
 @media (min-width: 992px) {
