--- a/css/styles_dark-red.css
+++ b/css/styles_dark-red.css
@@ -12,7 +12,7 @@
  */
 :root {
   --dark-red: #a75265;
-  --dark-purple: #57385c;
+  --dark-orange: #ec7263;
 
   --blue: #007bff;
   --indigo: #6610f2;
@@ -28,7 +28,7 @@
   --gray: #6c757d;
   --gray-dark: #343a40;
   --primary: #a75265;
-  --secondary: #57385c;
+  --secondary: #ec7263;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
@@ -216,7 +216,7 @@ table {
 caption {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-  color: #57385c;
+  color: #ec7263;
   text-align: left;
   caption-side: bottom;
 }
@@ -471,7 +471,7 @@ mark,
 .blockquote-footer {
   display: block;
   font-size: 80%;
-  color: #57385c;
+  color: #ec7263;
 }
 .blockquote-footer::before {
   content: "— ";
@@ -502,7 +502,7 @@ mark,
 
 .figure-caption {
   font-size: 90%;
-  color: #57385c;
+  color: #ec7263;
 }
 
 code {
@@ -2030,23 +2030,23 @@ pre code {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.25);
 }
 .form-control::-webkit-input-placeholder {
-  color: #57385c;
+  color: #ec7263;
   opacity: 1;
 }
 .form-control::-moz-placeholder {
-  color: #57385c;
+  color: #ec7263;
   opacity: 1;
 }
 .form-control:-ms-input-placeholder {
-  color: #57385c;
+  color: #ec7263;
   opacity: 1;
 }
 .form-control::-ms-input-placeholder {
-  color: #57385c;
+  color: #ec7263;
   opacity: 1;
 }
 .form-control::placeholder {
-  color: #57385c;
+  color: #ec7263;
   opacity: 1;
 }
 .form-control:disabled, .form-control[readonly] {
@@ -2170,7 +2170,7 @@ textarea.form-control {
   margin-left: -1.25rem;
 }
 .form-check-input[disabled] ~ .form-check-label, .form-check-input:disabled ~ .form-check-label {
-  color: #57385c;
+  color: #ec7263;
 }
 
 .form-check-label {
@@ -2505,8 +2505,8 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
   color: #fff;
-  background-color: #57385c;
-  border-color: #57385c;
+  background-color: #ec7263;
+  border-color: #ec7263;
 }
 .btn-secondary:hover {
   color: #fff;
@@ -2521,8 +2521,8 @@ fieldset:disabled a.btn {
 }
 .btn-secondary.disabled, .btn-secondary:disabled {
   color: #fff;
-  background-color: #57385c;
-  border-color: #57385c;
+  background-color: #ec7263;
+  border-color: #ec7263;
 }
 .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active, .show > .btn-secondary.dropdown-toggle {
   color: #fff;
@@ -2739,25 +2739,25 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-secondary {
-  color: #57385c;
-  border-color: #57385c;
+  color: #ec7263;
+  border-color: #ec7263;
 }
 .btn-outline-secondary:hover {
   color: #fff;
-  background-color: #57385c;
-  border-color: #57385c;
+  background-color: #ec7263;
+  border-color: #ec7263;
 }
 .btn-outline-secondary:focus, .btn-outline-secondary.focus {
   box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
 }
 .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-  color: #57385c;
+  color: #ec7263;
   background-color: transparent;
 }
 .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active, .show > .btn-outline-secondary.dropdown-toggle {
   color: #fff;
-  background-color: #57385c;
-  border-color: #57385c;
+  background-color: #ec7263;
+  border-color: #ec7263;
 }
 .btn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-secondary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
@@ -2926,7 +2926,7 @@ fieldset:disabled a.btn {
   text-decoration: underline;
 }
 .btn-link:disabled, .btn-link.disabled {
-  color: #57385c;
+  color: #ec7263;
   pointer-events: none;
 }
 
@@ -3195,7 +3195,7 @@ input[type=button].btn-block {
   background-color: #a75265;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
-  color: #57385c;
+  color: #ec7263;
   pointer-events: none;
   background-color: transparent;
 }
@@ -3209,7 +3209,7 @@ input[type=button].btn-block {
   padding: 0.5rem 1.5rem;
   margin-bottom: 0;
   font-size: 0.875rem;
-  color: #57385c;
+  color: #ec7263;
   white-space: nowrap;
 }
 
@@ -3533,7 +3533,7 @@ input[type=button].btn-block {
   border-color: #ebc9bc;
 }
 .custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
-  color: #57385c;
+  color: #ec7263;
 }
 .custom-control-input[disabled] ~ .custom-control-label::before, .custom-control-input:disabled ~ .custom-control-label::before {
   background-color: #e9ecef;
@@ -3660,7 +3660,7 @@ input[type=button].btn-block {
   background-image: none;
 }
 .custom-select:disabled {
-  color: #57385c;
+  color: #ec7263;
   background-color: #e9ecef;
 }
 .custom-select::-ms-expand {
@@ -3917,7 +3917,7 @@ input[type=button].btn-block {
   text-decoration: none;
 }
 .nav-link.disabled {
-  color: #57385c;
+  color: #ec7263;
   pointer-events: none;
   cursor: default;
 }
@@ -3937,7 +3937,7 @@ input[type=button].btn-block {
   border-color: #e9ecef #e9ecef #dee2e6;
 }
 .nav-tabs .nav-link.disabled {
-  color: #57385c;
+  color: #ec7263;
   background-color: transparent;
   border-color: transparent;
 }
@@ -4577,7 +4577,7 @@ input[type=button].btn-block {
 .breadcrumb-item + .breadcrumb-item::before {
   display: inline-block;
   padding-right: 0.5rem;
-  color: #57385c;
+  color: #ec7263;
   content: "/";
 }
 .breadcrumb-item + .breadcrumb-item:hover::before {
@@ -4587,7 +4587,7 @@ input[type=button].btn-block {
   text-decoration: none;
 }
 .breadcrumb-item.active {
-  color: #57385c;
+  color: #ec7263;
 }
 
 .pagination {
@@ -4636,7 +4636,7 @@ input[type=button].btn-block {
   border-color: #a75265;
 }
 .page-item.disabled .page-link {
-  color: #57385c;
+  color: #ec7263;
   pointer-events: none;
   cursor: auto;
   background-color: #fff;
@@ -4722,7 +4722,7 @@ a.badge-primary:focus, a.badge-primary.focus {
 
 .badge-secondary {
   color: #fff;
-  background-color: #57385c;
+  background-color: #ec7263;
 }
 a.badge-secondary:hover, a.badge-secondary:focus {
   color: #fff;
@@ -5061,7 +5061,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   border-bottom-left-radius: inherit;
 }
 .list-group-item.disabled, .list-group-item:disabled {
-  color: #57385c;
+  color: #ec7263;
   pointer-events: none;
   background-color: #fff;
 }
@@ -5378,7 +5378,7 @@ a.close.disabled {
   display: flex;
   align-items: center;
   padding: 0.25rem 0.75rem;
-  color: #57385c;
+  color: #ec7263;
   background-color: rgba(255, 255, 255, 0.85);
   background-clip: padding-box;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
@@ -6110,7 +6110,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #57385c !important;
+  background-color: #ec7263 !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
@@ -6232,7 +6232,7 @@ button.bg-dark:focus {
 }
 
 .border-secondary {
-  border-color: #57385c !important;
+  border-color: #ec7263 !important;
 }
 
 .border-success {
@@ -9810,7 +9810,7 @@ a.text-primary:hover, a.text-primary:focus {
 }
 
 .text-secondary {
-  color: #57385c !important;
+  color: #ec7263 !important;
 }
 
 a.text-secondary:hover, a.text-secondary:focus {
@@ -9870,7 +9870,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-muted {
-  color: #57385c !important;
+  color: #ec7263 !important;
 }
 
 .text-black-50 {
@@ -10005,7 +10005,7 @@ h3 {
 }
 body {
   padding-top: 3.375rem;
-  color: #57385c;
+  color: #ec7263;
 }
 
 @media (min-width: 992px) {
